Spanish language updates (#329)

--- a/locales/es.json
+++ b/locales/es.json
@@ -237,53 +237,53 @@
 	"Other Sites": "Other Sites",
 	"Resources": "Resources",
 	"Show All": "Show All",
-	"Help with Question phase": "Help with Question phase",
-	"Help with Investigation phase": "Help with Investigation phase",
-	"Help with Review phase": "Help with Review phase",
-	"Paraphrasing Support": "Paraphrasing Support",
-	"Posters": "Posters",
-	"Rubrics": "Rubrics",
-	"Self-assessments": "Self-assessments",
-	"Sentence Starters": "Sentence Starters",
-	"Student Organizer": "Student Organizer",
-	"Training Materials": "Training Materials",
-	"Filter": "Filter",
-	"Download": "Download",
-	"Add Your Resource": "Add Your Resource",
-	"Do you have a great resource to share? Let us know!": "Do you have a great resource to share? Let us know!",
-	"If you've got a great SOLE resource, click the button below and send it our way!  We'll be happy to share it with our community and credit you for your work!": "If you've got a great SOLE resource, click the button below and send it our way!  We'll be happy to share it with our community and credit you for your work!",
-	"You're logged out!": "You're logged out!",
-	"Log Back In": "Log Back In",
+	"Help with Question phase": "Ayuda con la fase de Pregunta",
+	"Help with Investigation phase": "Ayuda con la fase de Búsqueda",
+	"Help with Review phase": "Ayuda con la fase de Retroalimentación",
+	"Paraphrasing Support": "Apoyo para la Observación",
+	"Posters": "Carteleras",
+	"Rubrics": "Rúbricas",
+	"Self-assessments": "Autoevaluaciones",
+	"Sentence Starters": "Detonadores para la Conversación",
+	"Student Organizer": "Organizador para estudiantes",
+	"Training Materials": "Materiales de entrenamiento",
+	"Filter": "Filtrar",
+	"Download": "Descargar",
+	"Add Your Resource": "Agrega tu recurso",
+	"Do you have a great resource to share? Let us know!": "¿Tienes un gran recurso para compartir? ¡Cuéntanos!",
+	"If you've got a great SOLE resource, click the button below and send it our way!  We'll be happy to share it with our community and credit you for your work!": "Si tienes un gran recurso SOLE, haz clic en el botón de abajo y envíanoslo. ¡Nos complacerá compartirlo con nuestra comunidad y darte el crédito por tu trabajo!",
+	"You're logged out!": "¡Te desconectaste!",
+	"Log Back In": "Iniciar sesión de nuevo",
 	"Email": "Email",
-	"invalid email": "invalid email",
+	"invalid email": "email inválido",
 	"Password": "Contraseña",
-	"Need an account?": "Need an account?",
-	"Sign up here.": "Sign up here.",
-	"Help! I forgot my password.": "Help! I forgot my password.",
-	"Reset Password": "Reset Password",
-	"Enter your email below and we'll send you a link to reset your password.": "Enter your email below and we'll send you a link to reset your password.",
-	"Cancel": "Cancel",
-	"Send Reset Email": "Send Reset Email",
-	"Try Our App!": "Try Our App!",
-	"No Thanks": "No Thanks",
-	"To add the StartSOLE signature to your email client, just follow the steps below:": "To add the StartSOLE signature to your email client, just follow the steps below:",
-	"Here is a preview of your signature:": "Here is a preview of your signature:",
-	"No CEUs ... yet! Create your first SOLE lesson plan & get points.": "No CEUs ... yet! Create your first SOLE lesson plan & get points.",
-	"Ambassadors": "Ambassadors",
-	"Setup Email Signature": "Setup Email Signature",
-	"Conferences/Events": "Conferences/Events",
-	"Browse": "Browse",
-	"Signup for StartSOLE": "Signup for StartSOLE",
-	"Email Us": "Email Us",
-	"Ambassador": "Ambassador",
+	"Need an account?": "¿Necesitas una cuenta?",
+	"Sign up here.": "Registrate aquí.",
+	"Help! I forgot my password.": "¡Ayuda! Olvidé mi contraseña.",
+	"Reset Password": "Restablecer la contraseña",
+	"Enter your email below and we'll send you a link to reset your password.": "Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.",
+	"Cancel": "Cancelar",
+	"Send Reset Email": "Enviar Correo de reestablecimiento",
+	"Try Our App!": "¡Prueba nuestra aplicación!",
+	"No Thanks": "No, gracias",
+	"To add the StartSOLE signature to your email client, just follow the steps below:": "Para agregar la firma de StartSOLE a tu correo electrónico, simplemente sigue los siguientes pasos:",
+	"Here is a preview of your signature:": "Aquí hay una vista previa de tu firma:",
+	"No CEUs ... yet! Create your first SOLE lesson plan & get points.": "¡Todavía no tienes CEUs! Planea tu primer SOLE y obtén puntos.",
+	"Ambassadors": "Embajadores",
+	"Setup Email Signature": "Configurar firma de correo electrónico",
+	"Conferences/Events": "Conferencias/Eventos",
+	"Browse": "Buscar",
+	"Signup for StartSOLE": "Registrarse en StartSOLE",
+	"Email Us": "Envíanos un correo electrónico",
+	"Ambassador": "Embajador",
 	"Create Lesson": "Planear la lección",
-	"Save Question": "Save Question",
-	"Create Lesson Plan": "Create Lesson Plan",
-	"No SOLEs completed... yet": "No SOLEs completed... yet",
-	"Register": "Register",
-	"Already have an account?": "Already have an account?",
-	"Login": "Login",
-	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.",
+	"Save Question": "Guardar Pregunta",
+	"Create Lesson Plan": "Planear sesión de SOLE",
+	"No SOLEs completed... yet": "No has completado SOLEs...todavía ",
+	"Register": "Registro",
+	"Already have an account?": "¿Ya tienes una cuenta?",
+	"Login": "Iniciar sesión",
+	"By creating an account and logging in, I agree to the <a href='/terms-of-use' target='_blank'>Terms of Use</a> and <a href='/privacy' target='_blank'>Privacy Policy</a>.": "Al crear una cuenta e iniciar sesión, acepto los <a href='/terms-of-use' target='_blank'>Términos de uso</a> y <a href = '/privacy' target='_ blank'>Política de privacidad</a>.",
 	"Dashboard": "Dashboard",
 	"Educators": "Educators",
 	"SOLEs": "SOLEs",
@@ -324,34 +324,34 @@
 	"10th grade": "Décimo grado",
 	"11th grade": "Onceavo grado",
 	"12th grade": "Duodécimo grado",
-	"Choose your option": "Choose your option",
-	"Add Photos": "Add Photos",
-	"During this SOLE, your objective was": "During this SOLE, your objective was",
-	"Do you think you\n                            achieved this objective?": "Do you think you\n                            achieved this objective?",
-	"Strongly Agree": "Strongly Agree",
-	"Agree": "Agree",
-	"Disagree": "Disagree",
-	"Strongly Disagree": "Strongly Disagree",
-	"Select your response": "Select your response",
-	"Why do you think this?": "Why do you think this?",
-	"What type of thinking were most students using during this SOLE?": "What type of thinking were most students using during this SOLE?",
-	"Learn More about Webb's Depth of Knowledge": "Learn More about Webb's Depth of Knowledge",
-	"Recall and Reproduction": "Recall and Reproduction",
-	"Skill/Concept": "Skill/Concept",
-	"Short Term Strategic": "Short Term Strategic",
-	"Long Term Strategic": "Long Term Strategic",
-	"What percentage of students were engaged during the SOLE?": "What percentage of students were engaged during the SOLE?",
-	"What percentage of students worked effectively and respectfully together and shared responsibility?": "What percentage of students worked effectively and respectfully together and shared responsibility?",
-	"What percentage of student groups used technology effectively?": "What percentage of student groups used technology effectively?",
-	"What percentage of students articulated thoughts and listened effectively?": "What percentage of students articulated thoughts and listened effectively?",
-	"Did students appreciate and follow the ground rules?": "Did students appreciate and follow the ground rules?",
+	"Choose your option": "Elige una opción",
+	"Add Photos": "Agrega fotos",
+	"During this SOLE, your objective was": "Durante este SOLE, tu objetivo fue",
+	"Do you think you\n                            achieved this objective?": "¿Crees que has logrado este objetivo?",
+	"Strongly Agree": "Totalmente de acuerdo",
+	"Agree": "De acuerdo",
+	"Disagree": "En desacuerdo",
+	"Strongly Disagree": "Muy en desacuerdo",
+	"Select your response": "Selecciona tu respuesta",
+	"Why do you think this?": "¿Porque piensas esto?",
+	"What type of thinking were most students using during this SOLE?": "¿Qué tipo de pensamiento usaron la mayoría de los estudiantes durante este SOLE?",
+	"Learn More about Webb's Depth of Knowledge": "Aprende más sobre los Niveles de Pensamiento de Webb",
+	"Recall and Reproduction": "Memoria y reproducción",
+	"Skill/Concept": "Habilidad/Concepto",
+	"Short Term Strategic": "Estrategia a corto plazo",
+	"Long Term Strategic": "Estrategia a largo plazo",
+	"What percentage of students were engaged during the SOLE?": "¿Qué porcentaje de estudiantes estuvieron enganchados durante el SOLE?",
+	"What percentage of students worked effectively and respectfully together and shared responsibility?": "¿Qué porcentaje de estudiantes trabajaron juntos de manera efectiva y respetuosa y compartieron la responsabilidad?",
+	"What percentage of student groups used technology effectively?": "¿Qué porcentaje de grupos de estudiantes usaron la tecnología de manera efectiva?",
+	"What percentage of students articulated thoughts and listened effectively?": "¿Qué porcentaje de alumnos articularon pensamientos y escucharon efectivamente?",
+	"Did students appreciate and follow the ground rules?": "¿Los estudiantes comprendieron y siguieron las reglas básicas?",
 	"Yes": "Sí",
 	"No": "No",
-	"Do you need help with SOLE?": "Do you need help with SOLE?",
-	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
-	"Additional Notes for your Records": "Additional Notes for your Records",
-	"Please add at least 1 photo": "Please add at least 1 photo",
-	"No SOLEs completed... yet": "No SOLEs completed... yet",
+	"Do you need help with SOLE?": "¿Necesitas ayuda con SOLE?",
+	"If yes, please tell us a little more about your challenge": "Si es así, cuéntanos un poco más sobre tu reto.",
+	"Additional Notes for your Records": "Notas adicionales para tu registro",
+	"Please add at least 1 photo": "Por favor agregue al menos una foto",
+	"No SOLEs completed... yet": "No has completado SOLEs...todavía",
 	"Subject": "Materia",
 	"Filter by subject": "Filtrar por materia",
 	"All subjects": "Todos materias",
