A few more translations needed for colombia. I pulled in the `en.json` and `es.json` files from production and put them on this branch.

--- a/locales/en.json
+++ b/locales/en.json
@@ -328,5 +328,68 @@
 	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
 	"What worked well during this SOLE? What didn't work well?": "What worked well during this SOLE? What didn't work well?",
 	"Please add at least 1 photo": "Please add at least 1 photo",
-	"Additional Notes for your Records": "Additional Notes for your Records"
+	"Additional Notes for your Records": "Additional Notes for your Records",
+	"Create Lesson": "Create Lesson",
+	"Save Question": "Save Question",
+	"Create Lesson Plan": "Create Lesson Plan",
+	"Added to Saved": "Added to Saved",
+	"View": "View",
+	"Update": "Update",
+	"SOLEs": "SOLEs",
+	"Schools": "Schools",
+	"Educators By Grade": "Educators By Grade",
+	"Educators By Subject": "Educators By Subject",
+	"SOLEs By Grade": "SOLEs By Grade",
+	"SOLEs By Subject": "SOLEs By Subject",
+	"January": "January",
+	"February": "February",
+	"March": "March",
+	"April": "April",
+	"May": "May",
+	"June": "June",
+	"July": "July",
+	"August": "August",
+	"September": "September",
+	"October": "October",
+	"November": "November",
+	"December": "December",
+	"New Users 2017": "New Users 2017",
+	"New Users 2018": "New Users 2018",
+	"New Users 2019": "New Users 2019",
+	"Pre-K & Kindergarten": "Pre-K & Kindergarten",
+	"Elementary": "Elementary",
+	"Middle": "Middle",
+	"High School": "High School",
+	"Pre-K": "Pre-K",
+	"1st grade": "1st grade",
+	"2nd grade": "2nd grade",
+	"3rd grade": "3rd grade",
+	"4th grade": "4th grade",
+	"5th grade": "5th grade",
+	"6th grade": "6th grade",
+	"7th grade": "7th grade",
+	"8th grade": "8th grade",
+	"9th grade": "9th grade",
+	"10th grade": "10th grade",
+	"11th grade": "11th grade",
+	"12th grade": "12th grade",
+	"Are you sure you want to delete this SOLE?": "Are you sure you want to delete this SOLE?",
+	"Ambassadors": "Ambassadors",
+	"Setup Email Signature": "Setup Email Signature",
+	"Conferences/Events": "Conferences/Events",
+	"Browse": "Browse",
+	"Signup for StartSOLE": "Signup for StartSOLE",
+	"Email Us": "Email Us",
+	"Ambassador": "Ambassador",
+	"Search Notes & Feedback": "Search Notes & Feedback",
+	"Feedback": "Feedback",
+	"Notes": "Notes",
+	"Date": "Date",
+	"Attendance": "Attendance",
+	"students": "students",
+	"groups": "groups",
+	"Students formed their own groups": "Students formed their own groups",
+	"Students shared across groups": "Students shared across groups",
+	"Students completed a self-assessment": "Students completed a self-assessment",
+	"Students followed the ground rules": "Students followed the ground rules"
 }
