--- a/locales/es.json
+++ b/locales/es.json
@@ -370,5 +370,7 @@
 	"Visual Arts": "Artes",
 	"Grade": "Grado",
 	"(subject required)": "(materia requerido)",
-	"What worked well during this SOLE? What didn't work well?": "¿Qué funcionó bien durante esta SOLE? ¿Qué no funcionó bien?"
+	"What worked well during this SOLE? What didn't work well?": "¿Qué funcionó bien durante esta SOLE? ¿Qué no funcionó bien?",
+	"Are you sure you want to delete this SOLE?": "Are you sure you want to delete this SOLE?",
+	"Update": "Update"
 }
