updated translations.... I'm getting some local errors switching languages with this... may be related to a slack chat issue.  Don't deploy until reviewed for this.

--- a/locales/en.json
+++ b/locales/en.json
@@ -391,5 +391,7 @@
 	"Students formed their own groups": "Students formed their own groups",
 	"Students shared across groups": "Students shared across groups",
 	"Students completed a self-assessment": "Students completed a self-assessment",
-	"Students followed the ground rules": "Students followed the ground rules"
+	"Students followed the ground rules": "Students followed the ground rules",
+	"How many students?": "How many students?",
+	"Member since": "Member since"
 }
