--- a/locales/es.json
+++ b/locales/es.json
@@ -372,5 +372,8 @@
 	"(subject required)": "(materia requerido)",
 	"What worked well during this SOLE? What didn't work well?": "¿Qué funcionó bien durante esta SOLE? ¿Qué no funcionó bien?",
 	"Are you sure you want to delete this SOLE?": "Are you sure you want to delete this SOLE?",
-	"Update": "Update"
+	"Update": "Update",
+	"Download Plan": "Descarga el plan",
+	"How many students?": "¿Cuántos estudiantes?",
+	"Member since": "Miembro desde"
 }
