--- a/locales/en.json
+++ b/locales/en.json
@@ -328,5 +328,11 @@
 	"If yes, please tell us a little more about your challenge": "If yes, please tell us a little more about your challenge",
 	"What worked well during this SOLE? What didn't work well?": "What worked well during this SOLE? What didn't work well?",
 	"Please add at least 1 photo": "Please add at least 1 photo",
-	"Additional Notes for your Records": "Additional Notes for your Records"
+	"Additional Notes for your Records": "Additional Notes for your Records",
+	"Email Preferences": "Email Preferences",
+	"New CEUs Awarded": "New CEUs Awarded",
+	"Question Tips": "Question Tips",
+	"Lesson Plan Documents": "Lesson Plan Documents",
+	"Lesson Summary Documents": "Lesson Summary Documents",
+	"Reflection Reminders": "Reflection Reminders"
 }
