Make labels consist with text value in the database and also with the ordering in the database

--- a/locales/en.json
+++ b/locales/en.json
@@ -330,9 +330,9 @@
 	"Please add at least 1 photo": "Please add at least 1 photo",
 	"Additional Notes for your Records": "Additional Notes for your Records",
 	"Email Preferences": "Email Preferences",
-	"New CEUs Awarded": "New CEUs Awarded",
 	"Question Tips": "Question Tips",
-	"Lesson Plan Documents": "Lesson Plan Documents",
-	"Lesson Summary Documents": "Lesson Summary Documents",
-	"Reflection Reminders": "Reflection Reminders"
+	"Planning Documents": "Planning Documents",
+	"Summary Documents": "Summary Documents",
+	"Reflection Reminders": "Reflection Reminders",
+	"CEU Documents": "CEU Documents"
 }
