--- a/locales/es.json
+++ b/locales/es.json
@@ -370,5 +370,15 @@
 	"Visual Arts": "Artes",
 	"Grade": "Grado",
 	"(subject required)": "(materia requerido)",
-	"What worked well during this SOLE? What didn't work well?": "¿Qué funcionó bien durante esta SOLE? ¿Qué no funcionó bien?"
+	"What worked well during this SOLE? What didn't work well?": "¿Qué funcionó bien durante esta SOLE? ¿Qué no funcionó bien?",
+	"Download Plan": "Some Shit",
+	"Email Preferences": "Email Preferences",
+	"New CEUs Awarded": "New CEUs Awarded",
+	"Question Tips": "Question Tips",
+	"Lesson Plan Documents": "Lesson Plan Documents",
+	"Lesson Summary Documents": "Lesson Summary Documents",
+	"Reflection Reminders": "Reflection Reminders",
+	"Planning Documents": "Planning Documents",
+	"Summary Documents": "Summary Documents",
+	"CEU Documents": "CEU Documents"
 }
