Clean up profile  (#391)
* WIP

* Make labels consist with text value in the database and also with the ordering in the database

*  Clean up variable structure, clean up routes. Make posting to profile easier. Make routes for all profile cards. closes to #387

--- a/locales/en.json
+++ b/locales/en.json
@@ -334,5 +334,8 @@
 	"Question Tips": "Question Tips",
 	"Lesson Plan Documents": "Lesson Plan Documents",
 	"Lesson Summary Documents": "Lesson Summary Documents",
-	"Reflection Reminders": "Reflection Reminders"
+	"Reflection Reminders": "Reflection Reminders",
+	"Planning Documents": "Planning Documents",
+	"Summary Documents": "Summary Documents",
+	"CEU Documents": "CEU Documents"
 }
