Add text to rings page for when a user is not part of any rings. Closes #417

--- a/locales/en.json
+++ b/locales/en.json
@@ -337,5 +337,7 @@
 	"Reflection Reminders": "Reflection Reminders",
 	"Planning Documents": "Planning Documents",
 	"Summary Documents": "Summary Documents",
-	"CEU Documents": "CEU Documents"
+	"CEU Documents": "CEU Documents",
+	"Oops! Nothing to show here!": "Oops! Nothing to show here!",
+	"You're not currently a part of any rings.": "You're not currently a part of any rings."
 }
