Feature improve dashboards for rings unique routes etc (#424)
* WIP. Break up dashboard into parts so we can have routes for each one. seperate js and css into reusable chunks. Related to #403

* separate all graphs and js, make dashboard more modular and linkable

* Clean up code to use middleware on all rings routes to ensure isAuth

* remove redundant code

--- a/locales/en.json
+++ b/locales/en.json
@@ -339,5 +339,46 @@
 	"Summary Documents": "Summary Documents",
 	"CEU Documents": "CEU Documents",
 	"Oops! Nothing to show here!": "Oops! Nothing to show here!",
-	"You're not currently a part of any rings.": "You're not currently a part of any rings."
+	"You're not currently a part of any rings.": "You're not currently a part of any rings.",
+	"Log In": "Log In",
+	"SOLEs": "SOLEs",
+	"Schools": "Schools",
+	"New User Signups": "New User Signups",
+	"January": "January",
+	"February": "February",
+	"March": "March",
+	"April": "April",
+	"May": "May",
+	"June": "June",
+	"July": "July",
+	"August": "August",
+	"September": "September",
+	"October": "October",
+	"November": "November",
+	"December": "December",
+	"New Users 2017": "New Users 2017",
+	"New Users 2018": "New Users 2018",
+	"New Users 2019": "New Users 2019",
+	"Educators By Grade": "Educators By Grade",
+	"Pre-K & Kindergarten": "Pre-K & Kindergarten",
+	"Elementary": "Elementary",
+	"Middle": "Middle",
+	"High School": "High School",
+	"Pre-K": "Pre-K",
+	"1st grade": "1st grade",
+	"2nd grade": "2nd grade",
+	"3rd grade": "3rd grade",
+	"4th grade": "4th grade",
+	"5th grade": "5th grade",
+	"6th grade": "6th grade",
+	"7th grade": "7th grade",
+	"8th grade": "8th grade",
+	"9th grade": "9th grade",
+	"10th grade": "10th grade",
+	"11th grade": "11th grade",
+	"12th grade": "12th grade",
+	"Educators By Subject": "Educators By Subject",
+	"SOLEs Growth": "SOLEs Growth",
+	"SOLEs By Grade": "SOLEs By Grade",
+	"SOLEs By Subject": "SOLEs By Subject"
 }
