Feature routes refactoring cleaner (#425)
* break up routes into different files, add some middleware to cut out redundant code

* fix bug which causes 404 to fail

* ADD HELLA TESTS!!!

--- a/locales/es.json
+++ b/locales/es.json
@@ -376,5 +376,7 @@
 	"Planning Documents": "Planning Documents",
 	"Summary Documents": "Summary Documents",
 	"Reflection Reminders": "Reflection Reminders",
-	"CEU Documents": "CEU Documents"
+	"CEU Documents": "CEU Documents",
+	"New User Signups": "New User Signups",
+	"SOLEs Growth": "SOLEs Growth"
 }
