--- a/locales/en.json
+++ b/locales/en.json
@@ -340,10 +340,12 @@
 	"CEU Documents": "CEU Documents",
 	"Oops! Nothing to show here!": "Oops! Nothing to show here!",
 	"You're not currently a part of any rings.": "You're not currently a part of any rings.",
-	"Log In": "Log In",
 	"SOLEs": "SOLEs",
 	"Schools": "Schools",
-	"New User Signups": "New User Signups",
+	"Educators By Grade": "Educators By Grade",
+	"Educators By Subject": "Educators By Subject",
+	"SOLEs By Grade": "SOLEs By Grade",
+	"SOLEs By Subject": "SOLEs By Subject",
 	"January": "January",
 	"February": "February",
 	"March": "March",
@@ -359,7 +361,6 @@
 	"New Users 2017": "New Users 2017",
 	"New Users 2018": "New Users 2018",
 	"New Users 2019": "New Users 2019",
-	"Educators By Grade": "Educators By Grade",
 	"Pre-K & Kindergarten": "Pre-K & Kindergarten",
 	"Elementary": "Elementary",
 	"Middle": "Middle",
@@ -377,8 +378,13 @@
 	"10th grade": "10th grade",
 	"11th grade": "11th grade",
 	"12th grade": "12th grade",
-	"Educators By Subject": "Educators By Subject",
+	"New User Signups": "New User Signups",
 	"SOLEs Growth": "SOLEs Growth",
-	"SOLEs By Grade": "SOLEs By Grade",
-	"SOLEs By Subject": "SOLEs By Subject"
+	"Schools in ": "Schools in ",
+	"Table of Schools": "Table of Schools",
+	"Locations": "Locations",
+	"Log In": "Log In",
+	"Welcome to StartSOLE": "Welcome to StartSOLE",
+	"Need an account? Register here!": "Need an account? Register here!",
+	"Map": "Map"
 }
