make questions an array if there is only one

--- a/locales/en.json
+++ b/locales/en.json
@@ -386,5 +386,34 @@
 	"Log In": "Log In",
 	"Welcome to StartSOLE": "Welcome to StartSOLE",
 	"Need an account? Register here!": "Need an account? Register here!",
-	"Map": "Map"
+	"Map": "Map",
+	"Academic Standards for the Arts and Humanities": "Academic Standards for the Arts and Humanities",
+	"Academic Standards for Science and Technology and Engineering Education (Secondary)": "Academic Standards for Science and Technology and Engineering Education (Secondary)",
+	"Academic Standards for Science and Technology and Engineering Education (PreK-3)": "Academic Standards for Science and Technology and Engineering Education (PreK-3)",
+	"Academic Standards for Environment and Ecology": "Academic Standards for Environment and Ecology",
+	"Academic Standards for Science and Technology and Engineering Education (Elementary)": "Academic Standards for Science and Technology and Engineering Education (Elementary)",
+	"Academic Standards for Civics and Government (PreK-3)": "Academic Standards for Civics and Government (PreK-3)",
+	"Academic Standards for Civics and Government (Elementary)": "Academic Standards for Civics and Government (Elementary)",
+	"Academic Standards for Civics and Government (Secondary)": "Academic Standards for Civics and Government (Secondary)",
+	"Academic Standards for Economics (PreK-3)": "Academic Standards for Economics (PreK-3)",
+	"Academic Standards for Economics (Elementary)": "Academic Standards for Economics (Elementary)",
+	"Academic Standards for Economics (Secondary)": "Academic Standards for Economics (Secondary)",
+	"Academic Standards for Geography (PreK-3)": "Academic Standards for Geography (PreK-3)",
+	"Academic Standards for Geography (Elementary)": "Academic Standards for Geography (Elementary)",
+	"Academic Standards for Geography (Secondary)": "Academic Standards for Geography (Secondary)",
+	"Academic Standards for History (PreK-3)": "Academic Standards for History (PreK-3)",
+	"Academic Standards for History (Elementary)": "Academic Standards for History (Elementary)",
+	"Academic Standards for History (Secondary)": "Academic Standards for History (Secondary)",
+	"Academic Standards for Health, Safety & Physical Education": "Academic Standards for Health, Safety & Physical Education",
+	"Academic Standards for Career Education and Work": "Academic Standards for Career Education and Work",
+	"Academic Standards for Family and Consumer Sciences": "Academic Standards for Family and Consumer Sciences",
+	"PA Core - Reading for Science and Technical Subjects (6-12)": "PA Core - Reading for Science and Technical Subjects (6-12)",
+	"PA Core - Reading for History and Social Studies (6-12)": "PA Core - Reading for History and Social Studies (6-12)",
+	"PA Core - Writing for History and Social Studies (6-12)": "PA Core - Writing for History and Social Studies (6-12)",
+	"PA Core - Writing for Science and Technical Subjects (6-12)": "PA Core - Writing for Science and Technical Subjects (6-12)",
+	"PA Core - English Language Arts (PreK-5)": "PA Core - English Language Arts (PreK-5)",
+	"PA Core - English Language Arts (6-12)": "PA Core - English Language Arts (6-12)",
+	"PA Core - Mathematics (PreK-12)": "PA Core - Mathematics (PreK-12)",
+	"Academic Standards for Environment and Ecology (PreK-3)": "Academic Standards for Environment and Ecology (PreK-3)",
+	"Academic Standards for Business, Computer and Information Technology": "Academic Standards for Business, Computer and Information Technology"
 }
